<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="xyz.yhsj.elauncher.setting.WallpaperActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:padding="14dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/壁纸"
            android:textColor="@android:color/black"
            android:textSize="22dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ddFFFFFF"
        android:padding="16dp">

        <TextView
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:text="@string/选择壁纸"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/setWallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:text="@string/设置壁纸"
            android:textColor="@android:color/black"
            android:textSize="20dp" />
    </RelativeLayout>

</RelativeLayout>
