<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".setting.AutoRunActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:padding="14dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/应用自启"
            android:textColor="@android:color/black"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/AwManager"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/原生"
            android:textColor="@android:color/black"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/shape"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/启用"
                android:textColor="@android:color/black"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tv_package"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/点击选取"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/cb_open"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:padding="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="该功能依赖于本桌面的自启机制，将本桌面设置为默认桌面，即可在开机时自动启动自定义的一款程序。"
            android:textSize="14dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/appList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>