<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".setting.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:padding="14dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/设置"
            android:textColor="@android:color/black"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/hoverBall"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/悬浮球"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/wallpaperSetting"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/壁纸设置"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/appList"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/列表设置"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/autoRun"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/应用自启"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/appManager"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/应用管理"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/accessibility"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/无障碍"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/inputMethod"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/输入法"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/locale"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/语言偏好设置"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/日期和时间"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/deviceAdmin"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/设备管理器"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/donate"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/赞赏"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/关于"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/unInstall"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/卸载"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="65dp"
                    android:src="@mipmap/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>