<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_line"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:src="@mipmap/ic_close" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toLeftOf="@+id/close"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="20dp" />


    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/tv_name"
        android:layout_margin="8dp"
        android:background="@android:color/black"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_below="@id/line"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/tv_package"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/icon"
        android:layout_toRightOf="@id/icon"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_package"
        android:layout_toRightOf="@id/icon"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_version"
        android:layout_toRightOf="@id/icon"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/unInstall"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/icon"
        android:layout_margin="10dp"
        android:background="@drawable/bg_line"
        android:gravity="center"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/卸载"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/hide"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/unInstall"
        android:layout_margin="10dp"
        android:background="@drawable/bg_line"
        android:gravity="center"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/隐藏"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/hide"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_line"
        android:gravity="center"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/详细信息"
        android:textColor="@android:color/black" />

</RelativeLayout>